--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,15 @@ db.sqlite3
 db.sqlite3-journal
 media
 
+.env/
+.venv/
+env/
+venv/
+*.env
+
+*.pyc
+db.sqlite3
+staticfiles/
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
